--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>First website</h1>
-  <a href="page1.html">Go to page1</a>
+  <a href="Page1.html">Go to Page1</a>
 </body>
 </html>
