--- a/Page1.html
+++ b/Page1.html
@@ -3,6 +3,6 @@
 <title>computer lab</title>
 </head>
 <body>
-<h1>Computer lab </h1>
+<h1>Computer lab.<a href="/">Get lost<a>.</h1>
 </body>
 </html>
