--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 <h1>First website</h1>
+  <img src="emoji.jpg">
+  <p>Ha Ha.....</p>
   <a href="Page1.html">Go to Page1</a>
 </body>
 </html>
